Add routing and metadata

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en" class="font-primary">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Simon Robertson</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
     </head>
     <body>
         <script type="module" src="/src/index.tsx"></script>
